fix - spacing issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -488,7 +488,7 @@ main {
 .navbar-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   padding: 0 10px;
 }
